# attapl

./: README.md
linlam/: README.md  linlam.cabal
linlam/progs/: abs-ill1.ll  abs-well1.ll  abs-well2.ll  abs1.ll  app-ill1.ll  app-ill2.ll  app-ill3.ll  app-well1.ll  app-well2.ll  bool1.ll  if-ill1.ll  if.ll  pair-ill1.ll  pair-ill2.ll  pair-well.ll  split-ill1.ll  split-well1.ll
linlam/src/: Checker.hs  Interpreter.hs  Main.hs  Parser.hs  Syntax.hs
linlam/test/: Spec.hs
rtl/: .gitignore  ChangeLog.md  LICENSE  package.yaml
rtl/src/: AST.hs  Eval.hs  Subst.hs  Type.hs
tal0/: LICENSE  README.md  product.tal0  tapl0.cabal
tal0/src/: Machine.hs
tapl0/: README.md
tapl0/src/: Main.hs  Parser.hs  Syntax.hs
